Fixed Button readability for screen readers and changed Index.html to index.hrml

--- a/Styles/base.css
+++ b/Styles/base.css
@@ -33,7 +33,7 @@ header img {
 
 header span {
     font-size: 1.2rem;
-    color: #F5B027;
+    color: #30405B;
 }
 
 /*-------- HAMBURGER MENU --------*/
